test/spec_vectors/func/fail/module_52.wat
(module (func $type-break-last-void-vs-num (result i32) (br 0)))